Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');

/* scrollbar width */
::-webkit-scrollbar {
    width: 17px;
}

/* scrollbar track */
::-webkit-scrollbar-track {
    background: #2a2a2a;
}

/* scrollbar handle */
::-webkit-scrollbar-thumb {
    background: #444;
}

    /* scrollbar handle on hover */
    ::-webkit-scrollbar-thumb:hover {
        background: #555;
    }

/* text selected */
::selection {
    background-color: #c5c1b9;
    color: #e7e7e7;
}

/* text in text input */
::placeholder {
    text-align: center;
}

/* Styling for layout header, including navbar */
#page-header {
    padding-top: 10px;
}

    #page-header .header {
        font-size: 30px;
        text-decoration: none;
        font-weight: bold;
        color: #c5c1b9;
    }

    #page-header ul {
        float: none;
    }

    #page-header a {
        text-decoration: none;
        color: #c5c1b9;
        padding: 15px;
        background-color: transparent; /* without this a weird result can happen when dragging one of the navbar items, without this it will return to the bootstap styling of a white background */
    }

/* Bootstrap overrides */
.navbar-nav > li {
    float: none;
    display: inline-block;
}

@media (max-width: 768px) {
    .navbar-nav > li {
        width: 100%;
        float: none;
        display: inline-block;
    }
}

.navbar-toggle {
    margin-top: 0;
    margin-bottom: 0;
    font-size: 25px;
    padding: 0px 10px 10px 10px;
}

#page-header a:hover {
    background-color: transparent; /* overrides the background bootstrap puts on nav items */
}

.row {
    margin: 0;
    width: 100%;
}

table {
    padding: 0 !important; /* this was causing 2 big padding areas at either side of each tr */
    overflow: hidden;
}

/* Site wide tag styling */
body {
    font-family: 'Roboto', sans-serif;
    font-size: 18px;
    background-color: #121212;
    color: #c5c1b9;
}

p {
    font-size: 18px;
}

img {
    max-width: 26px;
    height: auto;
}

input[type=text] {
    background-color: #202020;
    border: 1px solid #353535;
    border-radius: 5px;
    padding: 7px;
    font-size: 20px;
    margin-bottom: 10px;
    margin-right: 100%;
    box-shadow: 0 0 3px transparent;
    transition: box-shadow .5s;
}

    input[type=text]:focus {
        outline: none;
        box-shadow: 0 0 3px white;
    }

/* Site wide default table styling */
table {
    border: 1px solid #353535;
    border-collapse: separate;
    border-spacing: 0;
    color: #808080;
    margin-bottom: 30px;
    border-radius: 5px;
}

    /* the below 4 styles apply a border radius to the 4 corner th/td, this is needed otherwise they will just override the border radius on the table element */
    table tr:last-child td:first-child {
        border-bottom-left-radius: 5px;
    }

    table tr:last-child td:last-child {
        border-bottom-right-radius: 5px;
    }

    table tr:first-child th:first-child {
        border-top-left-radius: 5px;
    }

    table tr:first-child th:last-child {
        border-top-right-radius: 5px;
    }

    table th {
        background-color: #2a2a2a;
        color: #B4B4B4;
        position: sticky !important;
        top: -1px;
        border: none;
        padding: 7px !important;
        font-size: 18px;
    }

    table td {
        padding: 5px 7px !important;
        font-size: 18px;
    }

    table tr {
        background-color: #202020;
        transition: background-color .25s;
    }

        table tr:hover, .hover-table-cell { /* hover-table-cell is applied in the 'mergeRowHightlightFix' to fix rowspan highlight issues */
            background-color: #333;
        }

/* Persona recipes section styling */
#recipe-scroll-container {
    border-radius: 5px;
    overflow: hidden; /* this is needed as it cuts to corner off the scroll bar */
    border: 1px solid #353535;
    padding: 0;
    margin-bottom: 30px;
}

#recipe-scroll {
    max-height: 500px;
    overflow: auto;
    padding: 0;
    width: 100%;
}

    #recipe-scroll table {
        margin-bottom: 0;
        border-radius: 0;
        border: none;
        width: 100%;
    }
        /* this is to remove the border radius on the table in the persona recipe scroll. this isn't wanted as the border radius is applied to the container div to also apply the curve to the scroll bar */
        #recipe-scroll table tr:last-child td:first-child {
            border-bottom-left-radius: 0;
        }

        #recipe-scroll table tr:last-child td:last-child {
            border-bottom-right-radius: 0;
        }

        #recipe-scroll table tr:first-child th:first-child {
            border-top-left-radius: 0;
        }

        #recipe-scroll table tr:first-child th:last-child {
            border-top-right-radius: 0;
        }

/* Table column widths that don't fit nicely in bootstrap col-x styling */
.extra-slim-column {
    width: 5%;
}

.slim-column {
    width: 8%;
}

.wide-column {
    width: 15%;
}

/* Misc widely used class styling */
.text-align-center {
    text-align: center;
}

.padding-right {
    padding-right: 35px;
}

.white-space-pre-line {
    white-space: pre-line;
}

#return-to-top {
    width: 50px;
    height: 50px;
    bottom: 25px;
    right: 25px;
    position: fixed;
    border-radius: 50%;
    background-color: #202020;
    border: 1px solid #353535;
    outline: none;
    transition: background-color 1s;
}

    #return-to-top:hover {
        background-color: #333;
    }

    #return-to-top #label {
        font-size: 47px;
        font-weight: bold;
        padding-top: 5px;
        cursor: pointer;
    }

/* Text colouring */
.text-bright, a:link, a:visited {
    color: #c5c1b9;
    transition: all .5s;
}

    a:link:hover {
        text-decoration: none;
        filter: brightness(150%);
    }

.text-error {
    color: red;
}

.text-dark {
    color: #808080;
}

/* Style an element like a button, used on the 'See More' text for persona recipes */
.button {
    padding: 10px;
    background-color: #2a2a2a;
    margin-top: 5px;
    margin-bottom: 0;
}

    .button:hover {
        cursor: pointer;
    }

/* Persona types */
.type-ultimate {
    color: #4b75b3 !important;
}

.type-new-game {
    color: #b30000 !important;
}

/* Shadow types */
.type-normal {
    color: #16ce3c;
}

.type-miniboss {
    color: #FFD700;
}

.type-boss {
    color: #b30000;
}

/* Skill cost */
.cost-sp {
    color: #e8b819;
    font-weight: bold;
}

.cost-hp {
    color: #f71df0;
    font-weight: bold;
}

/* Persona / Shadow element affinities */
.affinity-weak {
    color: red;
    font-weight: bold;
}

.affinity-resistant {
    color: #9a10b5;
    font-weight: bold;
}

.affinity-null {
    color: dodgerblue;
    font-weight: bold;
}

.affinity-reflect {
    color: #FFD700;
    font-weight: bold;
}

.affinity-absorb {
    color: #16ce3c;
    font-weight: bold;
}

/* Mobile-hidden styling */
@media (max-width: 768px) {
    .mobile-hidden {
        display: none;
    }
}

